manifests/rabbitmq/rabbitmq-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: rabbitmq-gateway
  namespace: rabbitmq
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 15672
        name: http
        protocol: HTTP
      hosts:
        - "*"
